Revision history for Getopt-Euclid

0.3.0_1
  - Try if the CPAN indexer likes this $VERSION better

0.3.0
  - Reverted feature to match POD head section =head2, =head3 and =head4 because
    of backward compatibility issue (RT bug #70942)

0.2.9  2011-09-03
  - This command does not generate warnings anymore:
    perl -e 'use Getopt::Euclid; print $Getopt::Euclid::VERSION;'
  - Required and optional arguments can now be put in a POD head section =head2,
    =head3 and =head4 for more flexibility

0.2.8  2011-09-02
  - Support for optional defaults (RT bug #61438, patch from Paolo Medeo)
  - Extended the grammar of recognized POD headers for required and optional arguments:
    [STANDARD|STD|PROGRAM|SCRIPT|CLI|COMMAND[-| ]LINE] [REQUIRED|MANDATORY] [PARAM|PARAMETER|ARG|ARGUMENT][S]
    [STANDARD|STD|PROGRAM|SCRIPT|CLI|COMMAND[-| ]LINE]      OPTION[AL|S]    [PARAM|PARAMETER|ARG|ARGUMENT][S]
  - Usage error message now mentions the --man option in addition to --help

0.2.7
  - Updated dependencies in Build.PL module

0.2.6
  - Bugfix: corrected a .pod file finding issue

0.2.5
  - Bugfix for #69324: more efficient and accurate POD extraction using Perl::Tidy
  - Bugfix for #29301: automatically looking for POD located into .pod files
  - Bugfix for #69105: file META.yml states which license the module uses
  - Bugfix for #34200: variables in constraint specifications are read as
    originating from the 'main' package namespace
  - Little internal modification to prevent identical placeholders that are
    present multiple times in the specification to be processed multiple times.
  - Error messages for arguments that do not validate against the constraints
    now display the value of variables instead of their name.

0.2.4
  - Default values can now be specified in the POD and displayed in the program
    documentation
  - Support for more integer arguments, e.g. scientific notation like 1E8
  - Support for arguments that cannot coexist using the 'exclude' keyword